[package]
name = "Source"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio-postgres = "0.7.6"
# postgres = "0.19.3"
# ["runtime-actix-native-tls", "runtime-async-std-native-tls", "runtime-tokio-native-tls", "runtime-actix-rustls",
#   "runtime-async-std-rustls", "runtime-tokio-rustls"]
sqlx = {version = "0.5.13", features = ["runtime-actix-rustls", "postgres"]}
serde_json = "1.0.81"
# FROM: https://serde.rs/derive.html thanks to https://github.com/serde-rs/serde/issues/1586
serde = {version = "1.0.137", features = ["derive"]}
actix-web = "4.0.1"

[[bin]]
name = "NetworkIPLookup"
path = "NetworkIPLookup.rs"